--- a/index.html
+++ b/index.html
@@ -8,14 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<<<<<<< HEAD
-    <h1>Hello World</h1>
-    <h1>i am 16 years old</h1>
-    <p>what about journey to america</p>
-    <h2>i don't mean to harsh you</h2>
-    <h3>how are you</h3>
-=======
-    <h1>how are you</h1>
->>>>>>> mahmoud
+    <h1>hello world</h1>
 </body>
 </html>
