--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>how are you</h1>
-    <p>i'm fine</p>
+    <p id="first">i'm fine</p>
+    <p id="second">update</p>
 </body>
 </html>
